'Product_Cards_by_Stas_Gostev'

--- a/index.html
+++ b/index.html
@@ -11,8 +11,36 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 <body>
+<div class="item-card" data-qa="card">
+  <img src="images/imac.jpeg" alt="imac" class="item-image">
+  <div class="padding-box">
+      <h3>Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
+      <p class="item-article">Код товара: 195434</p>
+
+    <div class="fl fl-justify-between">
+      <div class="fl rating-stars">
+        <img src="images/star-active.svg" alt="star">
+        <img src="images/star-active.svg" alt="star">
+        <img src="images/star-active.svg" alt="star">
+        <img src="images/star-active.svg" alt="star">
+        <img src="images/star.svg" alt="star">
+      </div>
+      <div class="feedback">
+        <span>Отзывов: 5</span>
+      </div>
+    </div>
+
+    <div class="fl fl-justify-between price">
+      <span class="pr"> Цена:</span>
+      <span class="price-value">69 999 грн</span>
+    </div>
+
+    <a href="#" class="buy-button" data-qa="hover">купить</a>
+</div>
+</div>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
